--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,14 @@ body {
 .leaflet-top {
   z-index: 0 !important;
 }
+.rdrMonth {
+  width: 100% !important;
+}
 
+.rdrCalendarWrapper {
+  font-size: 16px !important;
+  width: 100% !important;
+}
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
